--- a/MacBook/src/styles/main.css
+++ b/MacBook/src/styles/main.css
@@ -16,7 +16,7 @@
 
 }
 
-
+/* Global Styles */
 body{
     background-color: var(--color-bg-white);
     font-family: var(--font-family-primary);
@@ -32,6 +32,26 @@ p{
     color: var(--color-text-gray);
 }
 
+a{
+   text-decoration: none;
+   color: var(--color-blue-link-hover);
+}
+
+button{
+    font-size: 1rem;
+    border: none;
+    border-radius: 50rem;
+    background-color: var(--color-blue-link);
+    padding: .85rem 1.5rem;
+    color: var(--color-bg-white);
+
+}
+
+button:hover{
+    background-color: var(--color-blue-link-hover);
+    cursor: pointer;
+}
+
 /* Text Styles */
 
 .gradient-text-blue{
@@ -43,6 +63,16 @@ p{
     color: transparent;
 }
 
+.gradient-text-colorful{
+    background-clip: text;
+    color: transparent;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../images/fx/gradient.jpg");
+
+}
+
+
 .main{
     display: flex;
     flex-direction: column ;
@@ -52,14 +82,59 @@ p{
     background: linear-gradient(to bottom, var(--color-blue-light-gradient-start)), var (var(--color-blue-light-gradient-end), var var(--color-bg-white))
 }
 
-.main_title{
+.main_title,
+.main_copy_text{
     font-size: 2rem;
+}
+
+.main_title{
+    
     line-height: 1.125;
     letter-spacing: 0,004em;
     color: var(--color-text-dark);
 }
-.main_suntitle{
+.main_subtitle{
 font-size: 4rem;
 letter-spacing: -0.05em;
+color: #333;
+margin-bottom: 1rem;
 
+}
+
+.main_media{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 2.5rem 0;
+}
+
+.main_media_image{
+    width: 60%;
+    object-fit: cover;
+
+}
+
+.main_copy_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.main_copy_text{
+    letter-spacing: -0.05em;
+    margin-bottom: 1.5rem;
+}
+
+.main_pricing{
+    font-weight: 700;
+    margin-top: 1.5rem;
+    color: var(--color-text-dark);
+}
+
+.main_availability,
+.main_language{
+    font-weight: 400;
+    color: var(--color-text-dark);
 }
